# spinach

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: cooking.rs  recipe.rs
src/: color.rs  console.rs  context.rs  helper.rs  lib.rs  renderer.rs  spinach.rs  spinner.rs  state.rs  term.rs
