[package]
name = "spinach"
version = "2.1.0"
authors = ["Etienne Napoleone <etienne.napoleone@gmail.com>"]
edition = "2021"
description = "Practical spinner for Rust"
documentation = "https://docs.rs/spinach"
readme = "README.md"
repository = "https://github.com/etienne-napoleone/spinach"
license = "GPL-3.0-or-later"
keywords = ["spinner", "terminal-ui", "loader", "cli", "terminal"]
categories = ["command-line-interface"]
exclude = ["assets/"]

[dependencies]
